--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="https://cdn.jsdelivr.net/npm/the-new-css-reset@1.4.7/css/reset.min.css"  rel="stylesheet">
-		<link href="style.css" rel="stylesheet" type="text/css">
+		<link href="assets/reset.css"  rel="stylesheet">
+		<link href="assets/style.css" rel="stylesheet">
+		<title>This is your title</title>
 	</head>
 	<body>
 		<p>This is where your HTML will go.</p>
